feat(calculator): - change script python

--- a/calculator-server/workflows/main.yml
+++ b/calculator-server/workflows/main.yml
@@ -9,6 +9,6 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
-      - run: pip install -U pip
-      - run: pip install fastapi uvicorn[standard] asteval pytest httpx
+      - run: pip3 install -U pip
+      - run: pip3 install fastapi uvicorn[standard] asteval pytest httpx
       - run: pytest -q
